@@ -1,9 +1,10 @@
 This is the ggRandomForests package submission v1.1.3
 --------------------------------------------------------------------------------
-* Update "Random Forest for Regression" vignette
-* Further development of draft package vignette "Survival with Random Forests" 
-* Add more test and example functions.
-* Refactor gg_ functions into S3 methods to allow future implementation for other random forest packages.
+* Update "ggRandomForests: Visually Exploring a Random Forest for Regression" vignette.
+* Further development of draft package vignette "Survival with Random Forests". 
+* Rename vignettes to align with randomForestSRC package usage.
+* Add more tests and example functions.
+* Refactor `gg_` functions into S3 methods to allow future implementation for other random forest packages.
 * Improved help files.
 * Updated DESCRIPTION file to remove redundant parts.
 * Misc Bug Fixes.
