@@ -4,8 +4,9 @@ Version: 1.1.3
 
 ggRandomForests v1.1.3
 ===================
-* Update "ggRandomForests: Visually Exploring a Random Forest for Regression" vignette
-* Further development of draft package vignette "Survival with Random Forests" 
+* Update "ggRandomForests: Visually Exploring a Random Forest for Regression" vignette.
+* Further development of draft package vignette "Survival with Random Forests". 
+* Rename vignettes to align with randomForestSRC package usage.
 * Add more tests and example functions.
 * Refactor `gg_` functions into S3 methods to allow future implementation for other random forest packages.
 * Improved help files.
